--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PhoneBookDbContext": "Server=localhost;Database=master;Trusted_Connection=True;"
+    "defaultConnection": "Server=SHOVON;Database=phoneBook;Trusted_Connection=True;"
   }
 }
